--- a/frontend/login page/css/main.css
+++ b/frontend/login page/css/main.css
@@ -27,7 +27,10 @@
 body,
 html {
     height: 100%;
-    font-family: Raleway-Regular, sans-serif
+    width: 100%;
+    font-family: Raleway-Regular, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 a {
@@ -48,7 +51,7 @@ a:focus {
 
 a:hover {
     text-decoration: none;
-    color: #57b846
+    color: rgba(102, 102, 102, 0.5)
 }
 
 h1,
@@ -195,13 +198,15 @@ iframe {
 }
 
 .limiter {
+    top: 0;
+    height: 100%;
     width: 100%;
     margin: 0 auto
 }
 
 .container-login100 {
     width: 100%;
-    min-height: 100vh;
+    max-height: 100vh;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -321,11 +326,11 @@ iframe {
 }
 
 .btn-show-pass:hover {
-    color: #57b846
+    color: rgba(102, 102, 102, 0.5)
 }
 
 .btn-show-pass.active {
-    color: #57b846
+    color: rgba(102, 102, 102, 0.5)
 }
 
 .input-checkbox100 {
@@ -371,7 +376,7 @@ iframe {
 }
 
 .input-checkbox100:checked+.label-checkbox100::before {
-    color: #57b846
+    color: rgba(102, 102, 102, 0.5)
 }
 
 .container-login100-form-btn {
@@ -408,7 +413,7 @@ iframe {
 }
 
 .login100-form-btn:hover {
-    background-color: #57b846
+    background-color: rgba(102, 102, 102, 0.5)
 }
 
 .validate-input {
@@ -483,22 +488,31 @@ iframe {
     }
 }
 
+#title {
+    text-align: center;
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ebebeb
+}
+
 .title h1 {
+    display: block;
+    /* width: fit-content; */
     text-align: center;
     font-size: 60px;
-    padding-top: 1em;
-    padding-left: 10%;
-    padding-right: 10%;
     font-weight: 600;
     font-family: 'Blackadder ITC TT';
 }
 
-#title-description {
-    text-align: center;
-    padding-top: 3em;
+.title-description {
+    display: block;
+    /* text-align: center; */
+    padding-top: 0;
     font-size: 20px;
-    padding-left: 10%;
-    padding-right: 10%;
+    /* padding-left: 10%;
+    padding-right: 10%; */
     font-family: 'Goudy Old Style';
 }
 
