--- a/frontend/login page/css/main.css
+++ b/frontend/login page/css/main.css
@@ -206,7 +206,7 @@ iframe {
 
 .container-login100 {
     width: 100%;
-    max-height: 100vh;
+    max-height: 100%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -490,7 +490,8 @@ iframe {
 
 #title {
     text-align: center;
-    /* width: 100%; */
+    padding: 3em 10%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
