--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,28 +11,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/fonts/font-awesome-4.7.0/css/font-awesome.min.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/fonts/Linearicons-Free-v1.0.0/icon-font.min.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/css-hamburgers/hamburgers.min.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/animsition/css/animsition.min.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/daterangepicker/daterangepicker.css}"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-    <link href="http://fonts.cdnfonts.com/css/blackadder-itc" rel="stylesheet"
-          th:href="@{/http://fonts.cdnfonts.com/css/blackadder-itc}"/>
+    <link rel="icon" type="image/png" href="static/images/icons/favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="static/vendor/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="static/fonts/Linearicons-Free-v1.0.0/icon-font.min.css"/>
+    <link rel="stylesheet" type="text/css" href="static/vendor/animate/animate.css"/>
+    <link rel="stylesheet" type="text/css" href="static/vendor/css-hamburgers/hamburgers.min.css"/>
+    <link rel="stylesheet" type="text/css" href="static/vendor/animsition/css/animsition.min.css"/>
+    <link rel="stylesheet" type="text/css" href="static/vendor/select2/select2.min.css"/>
+    <link rel="stylesheet" type="text/css" href="static/vendor/daterangepicker/daterangepicker.css"/>
+    <link rel="stylesheet" type="text/css" href="static/css/util.css"/>
+    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+    <link href="http://fonts.cdnfonts.com/css/blackadder-itc" rel="stylesheet"/>
     <link href="//db.onlinewebfonts.com/c/e60c6bde9f7530d160a42ce17c0067fb?family=Goudy+Old+Style" rel="stylesheet"
           type="text/css"/>
 
@@ -40,68 +30,63 @@
 </head>
 
 <body>
-<div id="title">
-    <div class="title">
-        <h1>
-            Memento Mori
-        </h1>
-        <p class=title-description>
-            In the universal chaos, humanity emerged. Not a tiny bit more purposeful than the rest. But with an
-            incredible faculty: That of creating meaning, however fleeting it might be.
-
-        </p>
+    <div id="title">
+        <div class="title">
+            <h1>
+                Memento Mori
+            </h1>
+            <p class=title-description>
+                In the universal chaos, humanity emerged. Not a tiny bit more purposeful than the rest. But with an
+                incredible faculty: That of creating meaning, however fleeting it might be.
+            </p>
+        </div>
     </div>
     <div class="limiter">
-
 
         <div class="container-login100">
 
             <div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
                 <h1 style="">Login</h1>
                 <form class="login100-form validate-form flex-sb flex-w">
-                        <span class="login100-form-title p-b-32">
 
-</span>
-                    <span class="txt1 p-b-11">
-Login
-</span>
+                    <span class="login100-form-title p-b-32"> </span>
+                    <span class="txt1 p-b-11"> Login </span>
+
                     <div class="wrap-input100 validate-input m-b-36" data-validate="Username is required">
-                        <input class="input100" type="text" name="username" placeholder="Please enter your email "
-                               th:text="${param.email}">
+                        <label>
+                            <input class="input100" type="text" name="username" placeholder="Please enter your email "
+                                   th:text="${param.email}">
+                        </label>
                         <span class="focus-input100"></span>
                     </div>
-                    <span class="txt1 p-b-11">
-Password
-</span>
+
+                    <span class="txt1 p-b-11"> Password </span>
+
                     <div class="wrap-input100 validate-input m-b-12" data-validate="Password is required">
                             <span class="btn-show-pass">
-<i class="fa fa-eye"></i>
-</span>
-                        <input class="input100" type="password" name="pass" placeholder="Please enter your password"
-                               th:text="${param.password}">
+                                <i class="fa fa-eye"></i>
+                            </span>
+                        <label>
+                            <input class="input100" type="password" name="pass" placeholder="Please enter your password"
+                                   th:text="${param.password}">
+                        </label>
                         <span class="focus-input100"></span>
                     </div>
+
                     <div class="flex-sb-m w-full p-b-48">
                         <div class="contact100-form-checkbox">
                             <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                            <label class="label-checkbox100" for="ckb1">
-                                Remember me
-                            </label>
+                            <label class="label-checkbox100" for="ckb1"> Remember me </label>
                         </div>
                         <div>
-                            <a href="#" class="txt3">
-                                Forgot Password?
-                            </a>
+                            <a href="#" class="txt3"> Forgot Password? </a>
                         </div>
                     </div>
+
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
-                            Login
-                        </button>
+                        <button class="login100-form-btn"> Login </button>
                         <a class="new-acc" href="#">Create new account</a>
-
                     </div>
-
 
                 </form>
             </div>
@@ -110,21 +95,15 @@ Password
     <div id="dropDownSelect1"></div>
 
 
-    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-
-    <script src="vendor/animsition/js/animsition.min.js"></script>
-
-    <script src="vendor/bootstrap/js/popper.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <script src="vendor/select2/select2.min.js"></script>
-
-    <script src="vendor/daterangepicker/moment.min.js"></script>
-    <script src="vendor/daterangepicker/daterangepicker.js"></script>
-
-    <script src="vendor/countdowntime/countdowntime.js"></script>
-
-    <script src="js/main.js"></script>
+    <script src="static/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="static/vendor/animsition/js/animsition.min.js"></script>
+    <script src="static/vendor/bootstrap/js/popper.js"></script>
+    <script src="static/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/vendor/select2/select2.min.js"></script>
+    <script src="static/vendor/daterangepicker/moment.min.js"></script>
+    <script src="static/vendor/daterangepicker/daterangepicker.js"></script>
+    <script src="static/vendor/countdowntime/countdowntime.js"></script>
+    <script src="static/js/main.js"></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
     <script>
