deleted cloudfare script

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from colorlib.com/etc/lf/Login_v14/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 Oct 2021 11:22:38 GMT -->
 <!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <!-- /Added by HTTrack -->
 
 <head>
@@ -11,20 +11,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" href="static/images/icons/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="static/vendor/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="static/fonts/Linearicons-Free-v1.0.0/icon-font.min.css"/>
-    <link rel="stylesheet" type="text/css" href="static/vendor/animate/animate.css"/>
-    <link rel="stylesheet" type="text/css" href="static/vendor/css-hamburgers/hamburgers.min.css"/>
-    <link rel="stylesheet" type="text/css" href="static/vendor/animsition/css/animsition.min.css"/>
-    <link rel="stylesheet" type="text/css" href="static/vendor/select2/select2.min.css"/>
-    <link rel="stylesheet" type="text/css" href="static/vendor/daterangepicker/daterangepicker.css"/>
-    <link rel="stylesheet" type="text/css" href="static/css/util.css"/>
-    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
-    <link href="http://fonts.cdnfonts.com/css/blackadder-itc" rel="stylesheet"/>
-    <link href="//db.onlinewebfonts.com/c/e60c6bde9f7530d160a42ce17c0067fb?family=Goudy+Old+Style" rel="stylesheet"
-          type="text/css"/>
+    <link rel="icon" type="image/png" href="static/images/icons/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="static/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/fonts/Linearicons-Free-v1.0.0/icon-font.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/vendor/animate/animate.css" />
+    <link rel="stylesheet" type="text/css" href="static/vendor/css-hamburgers/hamburgers.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/vendor/animsition/css/animsition.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/vendor/select2/select2.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/vendor/daterangepicker/daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/main.css" />
+    <link href="http://fonts.cdnfonts.com/css/blackadder-itc" rel="stylesheet" />
+    <link href="//db.onlinewebfonts.com/c/e60c6bde9f7530d160a42ce17c0067fb?family=Goudy+Old+Style" rel="stylesheet" type="text/css" />
 
     <meta name="robots" content="noindex, follow">
 </head>
@@ -36,8 +35,7 @@
                 Memento Mori
             </h1>
             <p class=title-description>
-                In the universal chaos, humanity emerged. Not a tiny bit more purposeful than the rest. But with an
-                incredible faculty: That of creating meaning, however fleeting it might be.
+                In the universal chaos, humanity emerged. Not a tiny bit more purposeful than the rest. But with an incredible faculty: That of creating meaning, however fleeting it might be.
             </p>
         </div>
     </div>
@@ -63,7 +61,7 @@
                     <span class="txt1 p-b-11"> Password </span>
 
                     <div class="wrap-input100 validate-input m-b-12" data-validate="Password is required">
-                            <span class="btn-show-pass">
+                        <span class="btn-show-pass">
                                 <i class="fa fa-eye"></i>
                             </span>
                         <label>
@@ -117,8 +115,6 @@
 
         gtag('config', 'UA-23581568-13');
     </script>
-    <script defer src="../../../../static.cloudflareinsights.com/beacon.min.js"
-            data-cf-beacon='{"rayId":"69f92677d9f3b6ea","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.9.0","si":100}'></script>
 </body>
 
 
