--- a/src/main/resources/templates/static/css/main.css
+++ b/src/main/resources/templates/static/css/main.css
@@ -26,11 +26,19 @@
 
 body,
 html {
-    height: 100%;
+    height: auto;
     width: 100%;
     font-family: Raleway-Regular, sans-serif;
     display: flex;
     flex-wrap: wrap;
+    background-color: #ebebeb;
+}
+
+@media screen and (max-width: 600px) {
+    body,
+    html {
+        height: 50vh;
+    }
 }
 
 a {
@@ -199,7 +207,7 @@ iframe {
 
 .limiter {
     top: 0;
-    height: 100%;
+    height: 75%;
     width: 100%;
     margin: 0 auto
 }
@@ -492,10 +500,10 @@ iframe {
     text-align: center;
     padding: 3em 10%;
     width: 100%;
+    height: 25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #ebebeb
 }
 
 .title h1 {
