--- a/src/main/resources/webapp/frontend/sign_up_page/css/main.css
+++ b/src/main/resources/webapp/frontend/sign_up_page/css/main.css
@@ -405,7 +405,7 @@ iframe {
     flex-wrap: wrap
 }
 
-.login100-form-btn {
+.login100-form-btn, .login101-form-btn {
     font-family: Raleway-Bold;
     font-size: 16px;
     color: #fff;
