Add partial parameter extraction

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,17 +11,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" href="static/images/icons/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="static/vendor/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="static/fonts/Linearicons-Free-v1.0.0/icon-font.min.css" />
-    <link rel="stylesheet" type="text/css" href="static/vendor/animate/animate.css" />
-    <link rel="stylesheet" type="text/css" href="static/vendor/css-hamburgers/hamburgers.min.css" />
-    <link rel="stylesheet" type="text/css" href="static/vendor/animsition/css/animsition.min.css" />
-    <link rel="stylesheet" type="text/css" href="static/vendor/select2/select2.min.css" />
-    <link rel="stylesheet" type="text/css" href="static/vendor/daterangepicker/daterangepicker.css" />
-    <link rel="stylesheet" type="text/css" href="static/css/util.css" />
-    <link rel="stylesheet" type="text/css" href="static/css/main.css" />
+    <link rel="icon" type="image/png" th:href="@{/images/icons/favicon.ico}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/font-awesome-4.7.0/css/font-awesome.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/Linearicons-Free-v1.0.0/icon-font.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/vendor/css-hamburgers/hamburgers.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/vendor/animsition/css/animsition.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/vendor/daterangepicker/daterangepicker.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
     <link href="http://fonts.cdnfonts.com/css/blackadder-itc" rel="stylesheet" />
     <link href="//db.onlinewebfonts.com/c/e60c6bde9f7530d160a42ce17c0067fb?family=Goudy+Old+Style" rel="stylesheet" type="text/css" />
 
@@ -52,8 +52,8 @@
 
                     <div class="wrap-input100 validate-input m-b-36" data-validate="Username is required">
                         <label>
-                            <input class="input100" type="text" name="username" placeholder="Please enter your email "
-                                   th:text="${param.email}">
+                            <input class="input100" type="text" name="username" id="username"
+                                   placeholder="Please enter your email " th:text="${param.email}">
                         </label>
                         <span class="focus-input100"></span>
                     </div>
@@ -65,8 +65,8 @@
                                 <i class="fa fa-eye"></i>
                             </span>
                         <label>
-                            <input class="input100" type="password" name="pass" placeholder="Please enter your password"
-                                   th:text="${param.password}">
+                            <input class="input100" type="password" name="pass" id="password"
+                                   placeholder="Please enter your password" th:text="${param.password}">
                         </label>
                         <span class="focus-input100"></span>
                     </div>
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn"> Login </button>
+                        <button class="login100-form-btn" id="loginBtn"> Login </button>
                         <a class="new-acc" href="#">Create new account</a>
                     </div>
 
@@ -93,15 +93,15 @@
     <div id="dropDownSelect1"></div>
 
 
-    <script src="static/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <script src="static/vendor/animsition/js/animsition.min.js"></script>
-    <script src="static/vendor/bootstrap/js/popper.js"></script>
-    <script src="static/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="static/vendor/select2/select2.min.js"></script>
-    <script src="static/vendor/daterangepicker/moment.min.js"></script>
-    <script src="static/vendor/daterangepicker/daterangepicker.js"></script>
-    <script src="static/vendor/countdowntime/countdowntime.js"></script>
-    <script src="static/js/main.js"></script>
+    <script th:src="@{/vendor/jquery/jquery-3.2.1.min.js}"></script>
+    <script th:src="@{/vendor/animsition/js/animsition.min.js}"></script>
+    <script th:src="@{/vendor/bootstrap/js/popper.js}"></script>
+    <script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/vendor/select2/select2.min.js}"></script>
+    <script th:src="@{/vendor/daterangepicker/moment.min.js}"></script>
+    <script th:src="@{/vendor/daterangepicker/daterangepicker.js}"></script>
+    <script th:src="@{/vendor/countdowntime/countdowntime.js}"></script>
+    <script th:src="@{/js/main.js}"></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
     <script>
