--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,17 +11,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" th:href="@{/images/icons/favicon.ico}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/fonts/font-awesome-4.7.0/css/font-awesome.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/fonts/Linearicons-Free-v1.0.0/icon-font.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/css-hamburgers/hamburgers.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/animsition/css/animsition.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/vendor/daterangepicker/daterangepicker.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+    <link rel="icon" type="image/png" th:href="@{/login/images/icons/favicon.ico}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/vendor/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/fonts/font-awesome-4.7.0/css/font-awesome.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/fonts/Linearicons-Free-v1.0.0/icon-font.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/vendor/animate/animate.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/vendor/css-hamburgers/hamburgers.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/vendor/animsition/css/animsition.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/vendor/select2/select2.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/vendor/daterangepicker/daterangepicker.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/css/util.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/login/css/main.css}"/>
     <link href="http://fonts.cdnfonts.com/css/blackadder-itc" rel="stylesheet"/>
     <link href="//db.onlinewebfonts.com/c/e60c6bde9f7530d160a42ce17c0067fb?family=Goudy+Old+Style" rel="stylesheet"
           type="text/css"/>
@@ -52,9 +52,9 @@
                 <span class="login100-form-title p-b-32"> </span>
                 <span class="txt1 p-b-11"> Login </span>
 
-                <div class="wrap-input100 validate-input m-b-36" data-validate="Username is required">
+                <div class="wrap-input100 validate-input m-b-36" data-validate="Email is required">
                     <label>
-                        <input class="input100" type="text" name="username" id="username"
+                        <input class="input100" type="text" name="email" id="email"
                                placeholder="Please enter your email " th:text="${param.email}">
                     </label>
                     <span class="focus-input100"></span>
@@ -67,7 +67,7 @@
                                 <i class="fa fa-eye"></i>
                             </span>
                     <label>
-                        <input class="input100" type="password" name="pass" id="password"
+                        <input class="input100" type="password" name="password" id="password"
                                placeholder="Please enter your password" th:text="${param.password}">
                     </label>
                     <span class="focus-input100"></span>
@@ -79,7 +79,7 @@
                         <label class="label-checkbox100" for="ckb1"> Remember me </label>
                     </div>
                     <div>
-                        <a href="#" class="txt3"> Forgot Password? </a>
+                        <a href="#" class="txt3" id="forgotBtn"> Forgot Password? </a>
                     </div>
                 </div>
 
@@ -95,15 +95,15 @@
 <div id="dropDownSelect1"></div>
 
 
-<script th:src="@{/vendor/jquery/jquery-3.2.1.min.js}"></script>
-<script th:src="@{/vendor/animsition/js/animsition.min.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/popper.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{/vendor/select2/select2.min.js}"></script>
-<script th:src="@{/vendor/daterangepicker/moment.min.js}"></script>
-<script th:src="@{/vendor/daterangepicker/daterangepicker.js}"></script>
-<script th:src="@{/vendor/countdowntime/countdowntime.js}"></script>
-<script th:src="@{/js/main.js}"></script>
+<script th:src="@{/login/vendor/jquery/jquery-3.2.1.min.js}"></script>
+<script th:src="@{/login/vendor/animsition/js/animsition.min.js}"></script>
+<script th:src="@{/login/vendor/bootstrap/js/popper.js}"></script>
+<script th:src="@{/login/vendor/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/login/vendor/select2/select2.min.js}"></script>
+<script th:src="@{/login/vendor/daterangepicker/moment.min.js}"></script>
+<script th:src="@{/login/vendor/daterangepicker/daterangepicker.js}"></script>
+<script th:src="@{/login/vendor/countdowntime/countdowntime.js}"></script>
+<script th:src="@{/login/js/main.js}"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
