--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
                 <div class="wrap-input100 validate-input m-b-36" data-validate="Email is required">
                     <label>
                         <input class="input100" type="text" name="email" id="email"
-                               placeholder="Please enter your email " th:text="${param.email}">
+                               placeholder="Please enter your email ">
                     </label>
                     <span class="focus-input100"></span>
                 </div>
@@ -68,7 +68,7 @@
                             </span>
                     <label>
                         <input class="input100" type="password" name="password" id="password"
-                               placeholder="Please enter your password" th:text="${param.password}">
+                               placeholder="Please enter your password">
                     </label>
                     <span class="focus-input100"></span>
                 </div>
