Add connection to userPage

--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -43,8 +43,8 @@
     </header>
     <section class="container2">
         <img th:src="@{user/icon/person-circle.svg}" alt="" class="phtuser">
-        <p th:text="${user}"></p>
-        <h3 class="name">Name Surname</h3>
+        <h3 class="name">Name Surname </h3>
+        <p style="text-align:center;" th:text="${user}"></p>
     </section>
     <section class="qst">
         <div class="qst1">
@@ -80,7 +80,7 @@
 
     <section class="qst">
         <div class="qst1">
-            <h4>Do yu have any chronic desease? ?</h4>
+            <h4>Do you have any chronic disease ?</h4>
         </div>
         <input type="text" class="inpfrm" placeholder="Write here...">
         <br>
