--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,6 @@
         <div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
             <h1 style="">Login</h1>
             <form class="login100-form validate-form flex-sb flex-w">
-
                 <span class="login100-form-title p-b-32"> </span>
                 <span class="txt1 p-b-11"> Login </span>
 
@@ -82,7 +81,7 @@
                         <a href="#" class="txt3" id="forgotBtn"> Forgot Password? </a>
                     </div>
                 </div>
-
+                <p style="text-align:center;color:red;font-size: 14px;font-weight: bold" th:text="${user}"></p>
                 <div class="container-login100-form-btn">
                     <button class="login100-form-btn" id="loginBtn"> Login</button>
                     <a class="new-acc" href="#">Create new account</a>
