Add userPage MVC structure

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,6 +38,7 @@
         <p class=title-description>
             In the universal chaos, humanity emerged. Not a tiny bit more purposeful than the rest. But with an
             incredible faculty: That of creating meaning, however fleeting it might be.
+
         </p>
     </div>
 </div>
@@ -63,8 +64,8 @@
 
                 <div class="wrap-input100 validate-input m-b-12" data-validate="Password is required">
                         <span class="btn-show-pass">
-                                <i class="fa fa-eye"></i>
-                            </span>
+                            <i class="fa fa-eye"></i>
+                        </span>
                     <label>
                         <input class="input100" type="password" name="password" id="password"
                                placeholder="Please enter your password">
@@ -78,7 +79,7 @@
                         <label class="label-checkbox100" for="ckb1"> Remember me </label>
                     </div>
                     <div>
-                        <a href="#" class="txt3" id="forgotBtn"> Forgot Password? </a>
+                        <a href="#" class="txt3"> Forgot Password? </a>
                     </div>
                 </div>
                 <p style="text-align:center;color:red;font-size: 14px;font-weight: bold" th:text="${user}"></p>
@@ -111,11 +112,11 @@
     function gtag() {
         dataLayer.push(arguments);
     }
-
     gtag('js', new Date());
 
     gtag('config', 'UA-23581568-13');
 </script>
+<script defer src="../../../../static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"69f92677d9f3b6ea","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.9.0","si":100}'></script>
 </body>
 
 
